--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Atacama Desert, Chile, 2016.
 
 <p>I am a PhD student in Mathematics at the Technical University of Berlin.</p>
 <p><a href="mailto:anne.pein@t-online.de"> anne.pein@t-online.de </a></p>
-<p>You can find my full CV here: <a href="/Users/annepein/Documents/Verwaltung/Lebenslauf/CV/cv.pdf">CV</a> </p>
+<p>You can find my full CV here: <a href="cv.pdf">CV</a> </p>
 
 <p>Research Interests:
  <ul>
