--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Retrieval in X-Ray Propagation Imaging,” Opt. Express 24, 8332-8343 (2016).
  <ul>
   <li>Traveling, Photography</li>
   <li>Hiking, Swimming</li>
-  <li>Literature, Music, Languages, Card & Board Games</li>
+  <li><a href="Literature.html">Literature</a>, Music, Languages, Card & Board Games</li>
   <li>Nature, Conservation, Animal Rights</li>
 </ul> 
 </p>
