--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 Atacama Desert, Chile, 2016. 
 </p>
 
-<p>I am a PhD student in Mathematics at the Technical University of Berlin.</p>
+<p>I am a PhD student in Mathematics at the Technical University of Munich.</p>
 <p>anne.pein[at]t-online[dot]de</p>
 <p>You can find my full CV here: <a href="cv.pdf">CV</a> </p>
 
