--- a/Literature.html
+++ b/Literature.html
@@ -10,6 +10,11 @@
 <body style="font-family:verdana; margin-left:20px;">
 
 <h1>Literature </h1>
+<p> In this section I write about books that I have read; just because I like writing about 
+books and summarizing the content of a story, embedding it into a larger context and 
+filtering out it's (personal) meaning, helps me to conclude with it. And, of course, if
+  there are any readers of this section: I hope you find some inspiration for future readings.</p>
+
 <p>City of Joy - Dominique Lapierre</p>
 
 </body>
