--- a/Literature.html
+++ b/Literature.html
@@ -10,10 +10,7 @@
 <body style="font-family:verdana; margin-left:20px;">
 
 <h1>Literature </h1>
-<p> In this section I write about books that I have read; just because I like writing about 
-books and summarizing the content of a story, embedding it into a larger context and 
-filtering out it's (personal) meaning, helps me to conclude it. And, of course, if
-  there are any readers of this section: I hope you find some inspiration for future readings.</p>
+<p> In this section I write about books that I have read. I hope that whoever happens to end up on this page may find some inspiration for future readings.</p>
 
 <p>City of Joy - Dominique Lapierre</p>
 
