--- a/Literature.html
+++ b/Literature.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="font-family:verdana; margin-left:20px;">
-<a href=www.annepein.com>Home</a>
+<a href="index.html">Home</a>
   
 <h1>Literature </h1>
 <p> In this section I write about books that I have read. I hope that whoever happens to end up on this page may find some inspiration for future readings.</p>
