--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 
 <!-- Logo -->
+ <link rel="icon" 
+      type="image/png" 
+      href="cat.png" />
+ 
 <meta charset="utf-8" />
 <title> Anne Pein </title>
 </head>
