--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- Logo -->
  <link rel="icon" 
       type="image/png" 
-      href="cat.png" />
+      href="cat1.png" />
  
 <meta charset="utf-8" />
 <title> Anne Pein </title>
