--- a/Literature.html
+++ b/Literature.html
@@ -11,7 +11,7 @@
 <a href="index.html">Home</a>
   
 <h1>Literature </h1>
-<p> In this section I write about books that I have read. I hope that whoever happens to end up on this page may find some inspiration for future readings.</p>
+<p> In this section I write about books. I hope that whoever happens to end up on this page may find some inspiration for future readings.</p>
 
 <p>City of Joy - Dominique Lapierre</p>
 
