--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@ Atacama Desert, Chile, 2016.
 
 <p>Research Interests:
  <ul>
-  <li>Dynamical Systems</li>
-  <li>PDEs</li>
+  <li>PDEs, Dynamical Systems</li>
   <li>Stochastic</li>
-  <li>Harmonic Analysis</li>
+  <li>Functional/Harmonic Analysis</li>
   <li>Numerical Analysis</li>
 </ul> 
 </p>
