--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 
 <!-- Logo -->
- <!-- <link rel="icon" 
+ <link rel="icon" 
       type="image/png" 
-      href="Sun.png" />-->
+      href="leafneu.png" />
  
 <meta charset="utf-8" />
 <title> Anne Pein </title>
