--- a/Literature.html
+++ b/Literature.html
@@ -2,7 +2,12 @@
 <html>
 <head>
 
+
 <!-- Logo -->
+ <link rel="icon" 
+      type="image/png" 
+href="leafneu.png" />
+  
 <meta charset="utf-8" />
 <title> Anne Pein </title>
 </head>
