--- a/Literature.html
+++ b/Literature.html
@@ -18,7 +18,7 @@ href="leafneu.png" />
 <h1>Literature </h1>
 <p> In this section I write about books. I hope that whoever happens to end up on this page may find some inspiration for future readings.</p>
 
-<center>„All that is not given is lost“ </center>
+ <h2><center>„All that is not given is lost“ </center></h2>
  <center>on „City of Joy“  by Dominique Lapierre</center>
 
 <p>In November 2016, when I was about to head out to a Fall School in the Senegal my sister gave this book to me. However, being occupied with indispensable preparations regarding my forthcoming advance in this unknown territory, including the examination of all possible exotic diseases followed by paralyzing feelings of despair, I didn't manage to read the book before my departure. Nevertheless, since I, against all odds, came back in perfect health, just enriched by new friends, knowledge and unforgettable memories, I eventually found the time to read this beautiful book. 
