--- a/Literature.html
+++ b/Literature.html
@@ -18,6 +18,7 @@ href="leafneu.png" />
 <h1>Literature </h1>
 <p> In this section I write about books. I hope that whoever happens to end up on this page may find some inspiration for future readings.</p>
 
+ <section style="margin-left:20px;margin-right:20px;">
  <h2><center>„All that is not given is lost“ </center></h2>
  <center>on „City of Joy“  by Dominique Lapierre</center>
 
@@ -48,7 +49,7 @@ The book also pictures the deep spirituality of the Indian soul. Even on the dar
  <p align="justify">
 I really enjoyed reading this book, the fiction is picked with historical information and well researched facts allowing for a deep insight into the life and soul of the „poor“ in Kolkata. It opens your eyes and mind for different perceptions of life and illustrates that there is more than one truth out there. What might look incomprehensible for you, is reality for someone else. It also makes you think about Western materialism and what it has turned us into. Would we share our last chapatti with a stranger? Aren’t we „poor“, not in goods, but in our minds? In this way, the book points at the deeper meaning of our existence that is uncoupled from possessions and external circumstances. We cannot even begin to imagine what it’s like living in an Indian slum. It would probably make us scrape all our belongings together, complain about injustice and look for someone responsible. But instead of being paralyzed in anger, those people share and hope. 
  </p>
-
+ </section>
  
  
  
