--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ Atacama Desert, Chile, 2016.
 </p>
 
 <p>Publications:</p> 
-<a href="https://www.osapublishing.org/DirectPDFAccess/3D1CE80D-C9EA-11BA-F1FB2962E69C8A18_338909/oe-24-8-8332.pdf?da=1&id=338909&seq=0&mobile=no">A. Pein, S. Loock, G. Plonka, and T. Salditt, “Using Sparsity Information for Iterative Phase
-Retrieval in X-Ray Propagation Imaging,” Opt. Express 24, 8332-8343 (2016).</a>
+A. Pein, S. Loock, G. Plonka, and T. Salditt, “Using Sparsity Information for Iterative Phase
+Retrieval in X-Ray Propagation Imaging,” <a href="https://www.osapublishing.org/DirectPDFAccess/3D1CE80D-C9EA-11BA-F1FB2962E69C8A18_338909/oe-24-8-8332.pdf?da=1&id=338909&seq=0&mobile=no">Opt. Express 24, 8332-8343 (2016)</a>.
 
  
 <p>Other Interests:
