--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@ Atacama Desert, Chile, 2016.
 </ul> 
 </p>
 
-<p>Publications:</p> 
-F. Voigtlaender and A. Pein, “Analysis vs. synthesis sparsity for α-shearlets,” <a href="https://arxiv.org/abs/1702.03559"> preprint on arXiv</a> (2017). <br/>
-A. Pein, S. Loock, G. Plonka, and T. Salditt, “Using Sparsity Information for Iterative Phase
-Retrieval in X-Ray Propagation Imaging,” <a href="https://www.osapublishing.org/DirectPDFAccess/3D1CE80D-C9EA-11BA-F1FB2962E69C8A18_338909/oe-24-8-8332.pdf?da=1&id=338909&seq=0&mobile=no">Opt. Express 24, 8332-8343 (2016)</a>.
-
+<p>Publications:
+ <ul>
+   <li> F. Voigtlaender and A. Pein, “Analysis vs. synthesis sparsity for α-shearlets,” <a href="https://arxiv.org/abs/1702.03559"> preprint on arXiv</a> (2017). </li>
+   <li> A. Pein, S. Loock, G. Plonka, and T. Salditt, “Using Sparsity Information for Iterative Phase Retrieval in X-Ray Propagation Imaging,” <a href="https://www.osapublishing.org/DirectPDFAccess/3D1CE80D-C9EA-11BA-F1FB2962E69C8A18_338909/oe-24-8-8332.pdf?da=1&id=338909&seq=0&mobile=no">Opt. Express 24, 8332-8343 (2016)</a>.</li>
+ </ul> 
+</p> 
  
 <p>Other Interests:
  <ul>
