--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Atacama Desert, Chile, 2016.
  
 <p>Other Interests:
  <ul>
-  <li>Traveling, Photography</li>
+  <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Photography</a></li>
   <li>Hiking, Swimming</li>
   <li><a href="Literature.html">Literature</a>, Music, Languages, Card & Board Games</li>
   <li>Nature, Conservation, Animal Rights</li>
