--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@ Atacama Desert, Chile, 2016.
 </p>
 
 <p>I am a PhD student in Mathematics at the Technical University of Munich.</p>
-<p>anne.pein [at] t-online [dot] de</p>
+<p>pein [at] ma [dot] tum [dot] de</p>
 <p>You can find my full CV here: <a href="cv.pdf">CV</a> </p>
 
 <p>Research Interests:
  <ul>
-  <li>PDEs, Dynamical Systems</li>
-  <li>Stochastic</li>
-  <li>Functional/Harmonic Analysis</li>
-  <li>Numerical Analysis</li>
+  <li>Stochastic Analysis, SPDEs</li>
+  <li>Probability/Measure Theory</li>
+  <li>Dynamical Systems, PDEs</li>
 </ul> 
 </p>
 
@@ -45,7 +44,7 @@ Atacama Desert, Chile, 2016.
 <p>Other Interests:
  <ul>
   <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Photography</a></li>
-  <li>Hiking, Swimming</li>
+  <li>Hiking, Swimming, Bouldering</li>
   <li><a href="Literature.html">Literature</a>, Music, Languages, Card & Board Games</li>
   <li>Nature, Conservation, Animal Rights</li>
 </ul> 
