--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ Atacama Desert, Chile, 2016.
   <li>Stochastic Analysis, SPDEs</li>
   <li>Probability/Measure Theory</li>
   <li>Dynamical Systems, PDEs</li>
+  <li>Mathematical Physics</li>
 </ul> 
 </p>
 
