--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@ Atacama Desert, Chile, 2016.
  <ul>
   <li>Stochastic Analysis, SPDEs</li>
   <li>Probability/Measure Theory</li>
-  <li>Dynamical Systems, PDEs</li>
   <li>Mathematical Physics</li>
+  <li>Dynamical Systems, PDEs</li>
 </ul> 
 </p>
 
 <p>Other Interests:
  <ul>
   <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Photography</a></li>
-  <li>Hiking, Swimming, Bouldering, Climbing</li>
+  <li>Hiking, Swimming, Bouldering, Climbing, Skiing</li>
   <li><a href="Literature.html">Literature</a>, Music, Languages, Card & Board Games</li>
   <li>Nature, Conservation, Animal Rights</li>
 </ul> 
