--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@ Atacama Desert, Chile, 2016.
 
 <p>Research Interests:
  <ul>
-  <li>Stochastic Analysis, SPDEs</li>
-  <li>Probability/Measure Theory</li>
+  <li>Stochastic Analysis</li>
+  <li>Probability Theory</li>
   <li>Mathematical Physics</li>
-  <li>Dynamical Systems, PDEs</li>
 </ul> 
 </p>
 
