--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ Atacama Desert, Chile, 2016.
 
 <p>Other Interests:
  <ul>
-  <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Photography</a></li>
-  <li>Hiking, Swimming, Bouldering, Climbing, Skiing</li>
-  <li><a href="Literature.html">Literature</a>, Music, Languages, Card & Board Games</li>
-  <li>Nature, Conservation, Animal Rights</li>
+  <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Take photos</a></li>
+  <li>Hiking, Climbing, Swimming, Skiing (at least I want to )</li>
+  <li><a href="Literature.html">BOOKS</a>, Languages, Card & Board Games</li>
+  <li>Nature, Cats, Animal Rights</li>
 </ul> 
 </p>
 </body>
