--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Atacama Desert, Chile, 2016.
   <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Take photos</a></li>
   <li>Hiking, Climbing, Running, Skiing (at least I want to)</li>
   <li><a href="Literature.html">BOOKS</a>, Languages, Card & Board Games</li>
-  <li>Nature, Cats, Animal Rights</li>
+  <li>Nature, Animal Rights</li>
 </ul> 
 </p>
 </body>
