--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Atacama Desert, Chile, 2016.
 <p>Other Interests:
  <ul>
   <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Take photos</a></li>
-  <li>Hiking, Climbing, Running, Skiing (at least I want to)</li>
+  <li>Hiking, Climbing, Running, trying to Ski</li>
   <li><a href="Literature.html">BOOKS</a>, Languages, Card & Board Games</li>
   <li>Nature, Animal Rights</li>
 </ul> 
