--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Atacama Desert, Chile, 2016.
 
 <p>Other Interests:
  <ul>
-  <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Taking photos</a>, Camping</li>
+  <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Taking photos</a>, <a href="Camping.html">Camping</a>,</li>
   <li>Hiking, Climbing, Running, trying to Ski</li>
   <li><a href="Literature.html">BOOKS</a>, Languages, Card & Board Games</li>
   <li>Nature, Animal Rights</li>
