--- a/Camping.html
+++ b/Camping.html
@@ -17,8 +17,8 @@ href="leafneu.png" />
 <a href="index.html">Home</a>
   
 <h1>Camping </h1>
-<p style="float: right; width: 560px; margin-left: 20px; margin-bottom: 2px; text-align: left: font-size: 8pt;">
-<img src="1993_08-Urlaub Rügen.jpg" alt="Photo" hspace="0" vspace="0" align="left" style="width:540px;height:428px;" >
+<p style="float: left; width: 560px; margin-left: 20px; margin-bottom: 2px; text-align: left: font-size: 8pt;">
+<img src="1993_08-Urlaub Rügen.jpg" alt="Photo" hspace="0" vspace="0" align="left">
 Best sister in the world and me, Rügen, 1993. 
 </p>
 </body>
