--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Atacama Desert, Chile, 2016.
 
 <p>I am a PhD student in Mathematics at the Technical University of Munich.</p>
 <p>Contact me via: pein [at] ma [dot] tum [dot] de</p>
-<p>You can find my full CV here: <a href="cv.pdf">CV</a> </p>
+<p>You can find my CV here: <a href="cv.pdf">CV</a> </p>
 
 <p>Research Interests:
  <ul>
@@ -38,7 +38,7 @@ Atacama Desert, Chile, 2016.
  <ul>
   <li>Traveling, <a href="http://yourshot.nationalgeographic.com/profile/1501965/">Taking photos</a>, <a href="Camping.html">Camping</a></li>
   <li>Hiking, Climbing, Running, trying to Ski</li>
-  <li><a href="Literature.html">BOOKS</a>, Languages, Card & Board Games</li>
+  <li><a href="Literature.html">Books</a>, Languages, Card & Board Games</li>
   <li>Nature, Animal Rights</li>
 </ul> 
 </p>
