--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 
 
-<p style="float: right; width: 560px; margin-left: 20px; margin-bottom: 2px; text-align: left: font-size: 8pt;">
+<!-- <p style="float: right; width: 560px; margin-left: 20px; margin-bottom: 2px; text-align: left: font-size: 8pt;">
 <img src="PicMe.jpg" alt="Photo" hspace="0" vspace="0" align="left" style="width:540px;height:428px;" >
 Atacama Desert, Chile, 2016. 
-</p>
+</p> -->
 
 <p>I am a PhD student in Mathematics at the Technical University of Munich.</p>
 <p>Contact me via: pein [at] ma [dot] tum [dot] de</p>
