--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Atacama Desert, Chile, 2016.
 
 <p>I am a PhD student in Mathematics at the Technical University of Munich.</p>
 <p>Contact me via: pein [at] ma [dot] tum [dot] de</p>
-<p>You can find my CV here: <a href="cv.pdf">CV</a> </p>
+<!--<p>You can find my CV here: <a href="cv.pdf">CV</a> </p>
 
 <p>Research Interests:
  <ul>
@@ -42,5 +42,6 @@ Atacama Desert, Chile, 2016.
   <li>Nature, Animal Rights</li>
 </ul> 
 </p>
+-->
 </body>
 </html>
